readme vm options