@@ -1,1 +1,3 @@
 # awsome
+VM Options
+--module-path c:\path-to-fx-jdk\lib\ --add-modules javafx.controls,javafx.fxml
